--- a/Fly.WebUI/Views/Aircrafts/Details.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Details.cshtml
@@ -7,55 +7,55 @@
     <div class="card-body">
         <dl class="row">
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.ModelType)
+                @Localizer["ModelType"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.ModelType)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.SerialNumber)
+                @Localizer["SerialNumber"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.SerialNumber)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.ManufactureDate)
+                @Localizer["ManufactureDate"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.ManufactureDate)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.FlightHours)
+                @Localizer["FlightHours"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.FlightHours)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.AircraftState)
+                @Localizer["AircraftState"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.AircraftState)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.Airline)
+                @Localizer["Airline"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.Airline.Name)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.Airport)
+                @Localizer["Airport"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.Airport.Name)
             </dd>
             <dt class="col-sm-10">
-                @Html.DisplayNameFor(model => model.Seats)
+                @Localizer["Seats"]
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Seats.Count)
             </dd>
             <dt class = "col-sm-10">
-                @Html.DisplayNameFor(model => model.Id)
+                 @Localizer["Id"]
             </dt>
             <dd class = "col-sm-10">
                 @Html.DisplayFor(model => model.Id)
