--- a/Fly.WebUI/Views/Aircrafts/Create.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Create.cshtml
@@ -12,7 +12,7 @@
             @if (User.IsInRole("Administrator"))
             {
                 <div class="form-group">
-                    <label asp-for="AirlineId" class="control-label">@Localizer[""]</label>
+                    <label asp-for="AirlineId" class="control-label">@Localizer["Airline"]</label>
                     <input asp-for="AirlineId" value="@ViewData["SelectedAirlineId"]" class="form-control" />
                     <span asp-validation-for="AirlineId" class="text-danger"></span>
                     @Html.ActionLink("Select","Index","Airlines", new { isSelect = true, redirectUri = "/aircrafts/create" })
@@ -20,7 +20,7 @@
                 <br />
             }
             <div class="form-group">
-                <label asp-for="AirportId" class="control-label">@Localizer[""]</label>
+                <label asp-for="AirportId" class="control-label">@Localizer["Airport"]</label>
                 <input asp-for="AirportId" value="@ViewData["SelectedAirportId"]" readonly class="form-control" />
                 <span asp-validation-for="AirportId" class="text-danger"></span>
                 @Html.ActionLink("Select","Index","Airports", new { isSelect = true, redirectUri = "/aircrafts/create" })
@@ -37,25 +37,25 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="ModelType" class="control-label">@Localizer[""]</label>
+                <label asp-for="ModelType" class="control-label">@Localizer["ModelType"]</label>
                 <input asp-for="ModelType" class="form-control" />
                 <span asp-validation-for="ModelType" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="SerialNumber" class="control-label">@Localizer[""]</label>
+                <label asp-for="SerialNumber" class="control-label">@Localizer["SerialNumber"]</label>
                 <input asp-for="SerialNumber" class="form-control" />
                 <span asp-validation-for="SerialNumber" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="ManufactureDate" class="control-label">@Localizer[""]</label>
+                <label asp-for="ManufactureDate" class="control-label">@Localizer["ManufactureDate"]</label>
                 <input asp-for="ManufactureDate" class="form-control" />
                 <span asp-validation-for="ManufactureDate" class="text-danger"></span>
             </div>
             <br />
                 <div class="form-group">
-                <label asp-for="FlightHours" class="control-label">@Localizer[""]</label>
+                <label asp-for="FlightHours" class="control-label">@Localizer["FlightHours"]</label>
                     <input asp-for="FlightHours" class="form-control" />
                     <span asp-validation-for="FlightHours" class="text-danger"></span>
                 </div>
