--- a/Fly.WebUI/Views/Shared/_Layout.cshtml
+++ b/Fly.WebUI/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject IViewLocalizer Localizer
 
 <!DOCTYPE html>
