--- a/Fly.WebUI/Views/Airlines/Index.cshtml
+++ b/Fly.WebUI/Views/Airlines/Index.cshtml
@@ -30,7 +30,7 @@
 
                     <div class="col"> 
                         <br />
-                        <label> @SharedLocalizer["Descresing"].Value </label>
+                        <label> @SharedLocalizer["By Decreasing"].Value </label>
                         @Html.CheckBoxFor(x=>x.AirlineParameter.Descresing)
                     </div>
                 </div>
