--- a/Fly.WebUI/Views/Airlines/Create.cshtml
+++ b/Fly.WebUI/Views/Airlines/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer
 @model Fly.Core.Entities.Airline
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/airline.jpg">
@@ -9,30 +10,30 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label">@Localizer["Name"]</label>
+                <label asp-for="Name" class="control-label">@SharedLocalizer["Name"]</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="Phone" class="control-label">@Localizer["Phone"]</label>
+                <label asp-for="Phone" class="control-label">@SharedLocalizer["Phone"]</label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="RegistrationAddress" class="control-label">@Localizer["Adress"]</label>
+                <label asp-for="RegistrationAddress" class="control-label">@SharedLocalizer["Registration Address"]</label>
                 <input asp-for="RegistrationAddress" class="form-control" />
                 <span asp-validation-for="RegistrationAddress" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
         <br />
         <div>
-            <a asp-action="Index">@Localizer["Back"]</a>
+            <a asp-action="Index">@SharedLocalizer["Back"]</a>
         </div>
     </div>
 </div>
