--- a/Fly.WebUI/Views/Airports/Create.cshtml
+++ b/Fly.WebUI/Views/Airports/Create.cshtml
@@ -2,6 +2,7 @@
 @inject IViewLocalizer Localizer
 @using Fly.Core.Entities;
 @model Fly.Core.Entities.Airport
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/airport.jpg">
@@ -10,10 +11,10 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CityId" class="control-label">@Localizer[""]</label>
+                <label asp-for="CityId" class="control-label">@SharedLocalizer["City"]</label>
                 <input asp-for="CityId" value="@ViewData["SelectedCityId"]" readonly class="form-control" />
                 <span asp-validation-for="CityId" class="text-danger"></span>
-                @Html.ActionLink("Select","Index","Cities", new { isSelect = true, redirectUri = "/airports/create" })
+                @Html.ActionLink(SharedLocalizer["Select"].Value,"Index","Cities", new { isSelect = true, redirectUri = "/airports/create" })
             </div>
             @if (ViewData["SelectedCity"] != null)
             {
@@ -27,37 +28,37 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="Name" class="control-label">@Localizer[""]</label>
+                <label asp-for="Name" class="control-label">@SharedLocalizer["City"]</label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger">@Localizer[""]</span>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="AirportId" class="control-label">@Localizer[""]</label>
+                <label asp-for="AirportId" class="control-label">@SharedLocalizer["Airport"]</label>
                 <input asp-for="AirportId" class="form-control" />
                 <span asp-validation-for="AirportId" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="Longitude" class="control-label">@Localizer[""]</label>
+                <label asp-for="Longitude" class="control-label">@SharedLocalizer["Longitude"]</label>
                 <input asp-for="Longitude" class="form-control" />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="Latitude" class="control-label">@Localizer[""]</label>
+                <label asp-for="Latitude" class="control-label">@SharedLocalizer["Latitude"]</label>
                 <input asp-for="Latitude" class="form-control" />
                 <span asp-validation-for="Latitude" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="Altitude" class="control-label">@Localizer[""]</label>
+                <label asp-for="Altitude" class="control-label">@SharedLocalizer["Altitude"]</label>
                 <input asp-for="Altitude" class="form-control" />
                 <span asp-validation-for="Altitude" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
         <br />
         <div>
-            <a asp-action="Index">@Localizer["Back"]</a>
+            <a asp-action="Index">@SharedLocalizer["Back"]</a>
         </div>
     </div>
 </div>
