--- a/Fly.WebUI/Views/Cities/Create.cshtml
+++ b/Fly.WebUI/Views/Cities/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @model Fly.Core.Entities.City
 
 <div class="card  mx-auto" style="width:1000px">
@@ -9,27 +10,27 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label">@Localizer[""]</label>
+                <label asp-for="Name" class="control-label">@SharedLocalizer["Name"]</label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger">@Localizer[""]</span>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="IsoCountry" class="control-label">@Localizer[""]</label>
+                <label asp-for="IsoCountry" class="control-label">@SharedLocalizer["Iso Country"]</label>
                 <input asp-for="IsoCountry" class="form-control" />
                 <span asp-validation-for="IsoCountry" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="IsoRegion" class="control-label">@Localizer[""]</label>
+                <label asp-for="IsoRegion" class="control-label">@SharedLocalizer["Iso Region"]</label>
                 <input asp-for="IsoRegion" class="form-control" />
                 <span asp-validation-for="IsoRegion" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
         <br />
         <div>
-            <a asp-action="Index">@Localizer["Back"]</a>
+            <a asp-action="Index">@SharedLocalizer["Back"]</a>
         </div>
     </div>
 </div>
