--- a/Fly.WebUI/Views/Cities/Index.cshtml
+++ b/Fly.WebUI/Views/Cities/Index.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @model CitiesViewModel;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="card text-center mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/city.jpg">
@@ -9,7 +10,7 @@
         <form asp-action="Index">
             <div class="row">
                 <div class="col">
-                    <label class="control-label">Name</label>
+                    <label class="control-label">@SharedLocalizer["Name"]</label>
                     <input asp-for="CityParameter.Name" class="form-control" />
                 </div>
 
@@ -18,79 +19,79 @@
 
                 <div class="row">
                     <div class="col">
-                        <label> OrderBy </label>
+                        <label>@SharedLocalizer["Order By"]</label>
                         @Html.DropDownListFor(x => x.CityParameter.OrderBy,
                         new List<SelectListItem>
                         {
                             new SelectListItem{ Value = "Id", Text= "Id"},
-                            new SelectListItem{ Value = "Name", Text= "Name"},
-                            new SelectListItem{ Value = "IsoCountry", Text= "IsoCountry"},
-                            new SelectListItem{ Value = "IsoRegion", Text= "IsoRegion"}
+                            new SelectListItem{ Value = "Name", Text= SharedLocalizer["Name"].Value},
+                            new SelectListItem{ Value = "IsoCountry", Text= SharedLocalizer["Iso Country"].Value},
+                            new SelectListItem{ Value = "IsoRegion", Text= SharedLocalizer["Iso Region"].Value}
                         }, new { @class = "form-select"} )
                     </div>
 
                     <div class="col">
                         <br />
-                        <label> Descresing </label>
+                        <label>@SharedLocalizer["By Decreasing"] </label>
                         @Html.CheckBoxFor(x=>x.CityParameter.Descresing)
                     </div>
                 </div>
 
                 <div class="col">
                     <br/>
-                    <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
+                    <input type="submit" onclick="setStartPage()" value="@Localizer["Search"]" class="btn btn-primary" />
                 </div>
                 <br />
                 <div class="card-body">
                     @if (User.IsInRole("Administrator"))
                     {
-                        @Html.ActionLink("Create", "Create")
+                        @Html.ActionLink(SharedLocalizer["Create"].Value, "Create")
                     }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
                                 <th>
-                                    Name
+                                    @SharedLocalizer["Name"]
                                 </th>
                                 <th>
-                                    Country
+                                    @SharedLocalizer["Iso Country"]
                                 </th>
                                 <th>
-                                    Region
+                                    @SharedLocalizer["Iso Region"]
                                 </th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in Model.PagedResponse)
+                        @foreach (var item in Model.PagedResponse)
                         {
                             <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.IsoCountry)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.IsoRegion)
-                                    </td>
-                                    <td>
-                                        @if (Model.IsSelect)
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.IsoCountry)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.IsoRegion)
+                                </td>
+                                <td>
+                                    @if (Model.IsSelect)
+                                    {
+                                        @Html.ActionLink(SharedLocalizer["Select"].Value,"Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                    }
+                                    else
+                                    {
+                                        @if (User.IsInRole("Administrator"))
                                         {
-                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                            @Html.ActionLink(SharedLocalizer["Edit"].Value, "Edit", new { id = item.Id })
+                                            <br />
+                                            @Html.ActionLink(SharedLocalizer["Delete"].Value, "Delete", new { id = item.Id })
                                         }
-                                        else
-                                        {
-                                            @if (User.IsInRole("Administrator"))
-                                            {
-                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                                <br />
-                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                            }
-                                        }
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
-                                    </td>
-                                </tr>
+                                    }
+                                    @Html.ActionLink(SharedLocalizer["Details"].Value, "Details", new { id=item.Id })
+                                </td>
+                            </tr>
                         }
                         </tbody>
                     </table>
@@ -103,17 +104,17 @@
                     <input hidden="true" asp-for="MetaData.CurrentPage" value="@Model.MetaData.CurrentPage" id="pageNumber" class="form-control" />
                 </div>
                 @if (Model.MetaData.HasPrevious)
-            {
-                <div class="col">
-                        <input type="submit" value="Prev" onclick="decrementValue()" class="btn btn-outline-primary" />
+                {
+                    <div class="col">
+                        <input type="submit" value="@SharedLocalizer["Prev"]" onclick="decrementValue()" class="btn btn-outline-primary" />
                     </div>
-            }
+                }
                 @if (Model.MetaData.HasNext)
-            {
-                <div class="col">
-                        <input type="submit" value="Next" onclick="incrementValue()" class="btn btn-outline-primary" />
+                {
+                    <div class="col">
+                        <input type="submit" value="@SharedLocalizer["Next"]" onclick="incrementValue()" class="btn btn-outline-primary" />
                     </div>
-            }
+                }
             </div>
         </form>
     </div>
