--- a/Fly.WebUI/Views/Cities/Index.cshtml
+++ b/Fly.WebUI/Views/Cities/Index.cshtml
@@ -39,7 +39,7 @@
 
                 <div class="col">
                     <br/>
-                    <input type="submit" onclick="setStartPage()" value="@Localizer["Search"]" class="btn btn-primary" />
+                    <input type="submit" onclick="setStartPage()" value="@SharedLocalizer["Search"]" class="btn btn-primary" />
                 </div>
                 <br />
                 <div class="card-body">
