--- a/Fly.WebUI/Views/Administrator/Index.cshtml
+++ b/Fly.WebUI/Views/Administrator/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/flight.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-light ">@SharedLocalizer["Flight"]</p>
+        <p class="display-1 card-title text-uppercase text-light ">@SharedLocalizer["Flights"]</p>
         <a href="/flights" class="stretched-link"></a>
     </div>
 </div>
