--- a/Fly.WebUI/Views/Flights/Create.cshtml
+++ b/Fly.WebUI/Views/Flights/Create.cshtml
@@ -2,6 +2,7 @@
 @model Fly.Core.Entities.Flight
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/flight.jpg">
@@ -10,10 +11,10 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AircraftId" class="control-label">@Localizer[""]</label>
+                <label asp-for="AircraftId" class="control-label">@SharedLocalizer["Aircraft"]</label>
                 <input asp-for="AircraftId" value="@ViewData["SelectedAircraftId"]" readonly class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
-                @Html.ActionLink("Select","Index","Aircrafts", new { isSelect = true, redirectUri = "/flights/create" })
+                @Html.ActionLink(SharedLocalizer["Select"].Value,"Index","Aircrafts", new { isSelect = true, redirectUri = "/flights/create" })
             </div><br />
             @if (ViewData["SelectedAircraft"] != null)
             {
@@ -31,9 +32,9 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="ArrivalAirportId" class="control-label">@Localizer[""]</label>
+                <label asp-for="ArrivalAirportId" class="control-label">@SharedLocalizer["Arrival Airport"]</label>
                 <input asp-for="ArrivalAirportId" value="@ViewData["SelectedAirportId"]" readonly class="form-control" />
-                @Html.ActionLink("Select","Index","Airports", new { isSelect = true, redirectUri = "/flights/create" })
+                @Html.ActionLink(SharedLocalizer["Select"].Value,"Index","Airports", new { isSelect = true, redirectUri = "/flights/create" })
                 <span asp-validation-for="ArrivalAirportId" class="text-danger"></span>
             </div><br />
             @if (ViewData["SelectedAirport"] != null)
@@ -48,21 +49,21 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="DepartureDateTime" class="control-label">@Localizer[""]</label>
+                <label asp-for="DepartureDateTime" class="control-label">@SharedLocalizer["Departure Date"]</label>
                 <input asp-for="DepartureDateTime" class="form-control" />
                 <span asp-validation-for="DepartureDateTime" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="ArrivalDateTime" class="control-label">@Localizer[""]</label>
+                <label asp-for="ArrivalDateTime" class="control-label">@SharedLocalizer["Arrival Date"]</label>
                 <input asp-for="ArrivalDateTime" class="form-control" />
                 <span asp-validation-for="ArrivalDateTime" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form><br />
         <div>
-            <a asp-action="Index">@Localizer["Back"]</a>
+            <a asp-action="Index">@SharedLocalizer["Back"]</a>
         </div>
     </div>
 </div>
