--- a/Fly.WebUI/Views/Managers/Index.cshtml
+++ b/Fly.WebUI/Views/Managers/Index.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @model ManagersViewModel;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="card text-center mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/manager.jpg">
@@ -9,11 +10,11 @@
         <form asp-action="Index">
                 <div class="row">
                     <div class="col">
-                    <label  class="control-label">Airline Name</label>
+                    <label class="control-label">@SharedLocalizer["Airline"]</label>
                     <input asp-for="ManagerParameter.AirlineName" class="form-control" />
                 </div>
                 <div class="col">
-                    <label class="control-label">User Name</label>
+                    <label class="control-label">@SharedLocalizer["User Name"]</label>
                     <input asp-for="ManagerParameter.UserName" class="form-control" />
                 </div>
                 @Html.HiddenFor(x=>x.RedirectUri)
@@ -21,7 +22,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <label> OrderBy </label>
+                        <label>@SharedLocalizer["Order By"]</label>
                         @Html.DropDownListFor(x => x.ManagerParameter.OrderBy,
                         new List<SelectListItem>
                         {
@@ -32,38 +33,35 @@
 
                     <div class="col">
                         <br />
-                        <label> Descresing </label>
+                        <label>@SharedLocalizer["By Decreasing"]</label>
                         @Html.CheckBoxFor(x=>x.ManagerParameter.Descresing)
                     </div>
                 </div>
 
                 <div class="col">
                     <br />
-                    <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
+                    <input type="submit" onclick="setStartPage()" value=@SharedLocalizer["Search"] class="btn btn-primary" />
                 </div>
                 <br />
                 <div class="card-body">
                     @if (User.IsInRole("Administrator"))
                     {
-                        @Html.ActionLink("Create", "Create")
+                        @Html.ActionLink(SharedLocalizer["Create"].Value, "Create")
                     }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
                                 <th>
-                                    UserName
+                                    @SharedLocalizer["User Name"]
                                 </th>
                                 <th>
-                                    Airline
+                                    @SharedLocalizer["Airline"]
                                 </th>
                                 <th>
-                                    User Email
+                                    Email
                                 </th>
                                 <th>
-                                    Messages
-                                </th>
-                                <th>
-                                    Phone Number
+                                    @SharedLocalizer["Phone"]
                                 </th>
                                 <th></th>
                             </tr>
@@ -82,23 +80,23 @@
                                     @Html.DisplayFor(modelItem => item.User.Email)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.User.Messages.Count)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(modelItem => item.User.PhoneNumber)
                                 </td>
                                 <td>
-                                    @if (Model.IsSelect)
-                                    {
-                                        @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
-                                    }
-                                    @if (User.IsInRole("Administrator"))
-                                    {
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                        <br />
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                    }
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                        @if (Model.IsSelect)
+                                        {
+                                            @Html.ActionLink(SharedLocalizer["Select"].Value,"Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                        }
+                                        else
+                                        {
+                                            @if (User.IsInRole("Administrator"))
+                                            {
+                                                @Html.ActionLink(SharedLocalizer["Edit"].Value, "Edit", new { id = item.Id })
+                                                <br />
+                                                @Html.ActionLink(SharedLocalizer["Delete"].Value, "Delete", new { id = item.Id })
+                                            }
+                                        }
+                                        @Html.ActionLink(SharedLocalizer["Details"].Value, "Details", new { id=item.Id })
                                 </td>
                             </tr>
                         }
@@ -115,13 +113,13 @@
                 @if (Model.MetaData.HasPrevious)
             {
                 <div class="col">
-                        <input type="submit" value="Prev" onclick="decrementValue()" class="btn btn-outline-primary" />
+                        <input type="submit" value="@SharedLocalizer["Prev"]" onclick="decrementValue()" class="btn btn-outline-primary" />
                     </div>
             }
                 @if (Model.MetaData.HasNext)
             {
                 <div class="col">
-                        <input type="submit" value="Next" onclick="incrementValue()" class="btn btn-outline-primary" />
+                        <input type="submit" value="@SharedLocalizer["Next"]" onclick="incrementValue()" class="btn btn-outline-primary" />
                     </div>
             }
             </div>
