--- a/Fly.WebUI/Views/Passenger/Index.cshtml
+++ b/Fly.WebUI/Views/Passenger/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="row">
     <dic class="col">
         <div class="card bg-dark text-white text-center mx-auto" style="width:500px">
             <img class="card-img" src="~/ticket.jpg" alt="Card image">
             <div class="card-img-overlay">
-                <p class="display-1 card-title text-uppercase text-light ">Tickets</p>
+                <p class="display-1 card-title text-uppercase text-light ">@SharedLocalizer["Tickets"]</p>
                 <a href="~/passenger/tickets" class="stretched-link"></a>
             </div>
         </div>
@@ -14,7 +15,7 @@
         <div class="card bg-dark text-white text-center mx-auto" style="width:500px">
             <img class="card-img" src="~/flight.jpg" alt="Card image">
             <div class="card-img-overlay">
-                <p class="display-1 card-title text-uppercase text-light ">Profile</p>
+                <p class="display-1 card-title text-uppercase text-light ">@SharedLocalizer["Profile"]</p>
                 <a href="~/passenger/profile" class="stretched-link"></a>
             </div>
         </div>
