--- a/Fly.WebUI/Views/Passenger/Payoff.cshtml
+++ b/Fly.WebUI/Views/Passenger/Payoff.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @model PayoffViewModel
 
 <div id="liqpay_checkout"></div>
@@ -31,7 +32,7 @@
 	@Html.HiddenFor(x=>x.TicketId)
 	@Html.HiddenFor(x=>x.IsSuccessed)
 	<div class="form-group">
-		<input type="submit" value="PayOff" class="btn btn-primary" />
+		<input type="submit" value="@SharedLocalizer["Payoff"]" class="btn btn-primary" />
 	</div>
 </form>
 
