--- a/Fly.WebUI/Views/Passenger/Profile.cshtml
+++ b/Fly.WebUI/Views/Passenger/Profile.cshtml
@@ -64,7 +64,7 @@
                 </div>
                 <br />
             </fieldset>
-            @Html.ActionLink(SharedLocalizer["Save"].Value, "Index")
+            @Html.ActionLink(SharedLocalizer["Back"].Value, "Index")
         </form>
     </div>
 </div>
