--- a/Fly.WebUI/Views/Passenger/Tickets.cshtml
+++ b/Fly.WebUI/Views/Passenger/Tickets.cshtml
@@ -23,7 +23,7 @@
                     @Html.DropDownListFor(
                         x=>x.TicketParameter.TicketState,
                         Html.GetEnumSelectList<TicketState>()
-                        .Append(new SelectListItem(null,"All")),
+                        .Append(new SelectListItem("All",null)),
                         new { @class = "form-control" })
                 </div>
                 <div class="form-group">
