--- a/Fly.WebUI/Views/Tickets/Create.cshtml
+++ b/Fly.WebUI/Views/Tickets/Create.cshtml
@@ -2,6 +2,7 @@
 @using Fly.Shared.DataTransferObjects;
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @model TicketsDto
 
 <div class="card  mx-auto" style="width:1000px">
@@ -11,7 +12,7 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FlightId" class="control-label">@Localizer[""]</label>
+                <label asp-for="FlightId" class="control-label">@SharedLocalizer["Flight"]</label>
                 <input asp-for="FlightId" readonly value="@ViewData["SelectedFlightId"]" class="form-control" />
                 <span asp-validation-for="FlightId" class="text-danger"></span>
                 @Html.ActionLink("Select","Index","Flights", new { isSelect = true, redirectUri = "/tickets/create" })
@@ -28,26 +29,26 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="EconomClassPrice" class="control-label">@Localizer[""]</label>
+                <label asp-for="EconomClassPrice" class="control-label">@SharedLocalizer["Econom Class"]</label>
                 <input asp-for="EconomClassPrice" class="form-control" />
                 <span asp-validation-for="EconomClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="FirstClassPrice" class="control-label">@Localizer[""]</label>
+                <label asp-for="FirstClassPrice" class="control-label">@SharedLocalizer["First Class"]</label>
                 <input asp-for="FirstClassPrice" class="form-control" />
                 <span asp-validation-for="FirstClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="BusinessClassPrice" class="control-label">@Localizer[""]</label>
+                <label asp-for="BusinessClassPrice" class="control-label">@SharedLocalizer["Business Class"]</label>
                 <input asp-for="BusinessClassPrice"   class="form-control" />
                 <span asp-validation-for="BusinessClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
+                <input type="submit" value="@SharedLocalizer["Create"]" class="btn btn-primary" />
             </div>
         </form><br />
         <div>
-            <a asp-action="Index">@Localizer["Back"]</a>
+            <a asp-action="Index">@SharedLocalizer["Back"]</a>
         </div>
     </div>
 </div>
