--- a/Fly.WebUI/Views/Home/Index.cshtml
+++ b/Fly.WebUI/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Fly.Core.Entities;
 @model Flight
 @using Microsoft.AspNetCore.Mvc.Localization;
-@inject IViewLocalizer Localizer
+
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 <div class="row">
@@ -122,12 +122,12 @@
 					<h5 class="mb-1">${flight.arrivalCity}</h5>
 				</div>
 			<p class="mb-1">
-				Arrival Airport
+				@SharedLocalizer["Arrival Airport"].Value
 			</p>
 				<small>${flight.arrivalDateTime}</small>
 			</a>
 			</ul>
-			<a href="/flights/details/${flight.flightId}" class="card-link"> Details </a>
+			<a href="/flights/details/${flight.flightId}" class="card-link"> @SharedLocalizer["Details"].Value </a>
 		`;
 		$('#cardBody').html(html);
 		showFlightCard();
